--- a/views/viewsUniversal.html
+++ b/views/viewsUniversal.html
@@ -623,9 +623,9 @@
 <!-- product image template -->
 <script id="bvtemplate-product-info-universal" type="html">
 	<div class="BVProductInfoWrapper">
-		<div class="_BVProductInfoNameContainer"></div>
 		<div class="_BVProductInfoDescriptionContainer"></div>
 		<div class="_BVProductInfoImageContainer"></div>
+		<div class="_BVProductInfoNameContainer"></div>
 	</div>
 </script>
 
@@ -650,7 +650,7 @@
 
 <!-- input required indicator template -->
 <script id="bvtemplate-input-required-universal" type="html">
-	<div class="BVRequiredIndicator">*</div>
+	<span class="BVRequiredIndicator">*</span>
 </script>
 
 <!-- input default template -->
@@ -712,7 +712,7 @@
 <!-- input image template -->
 <script id="bvtemplate-input-radio-universal" type="html">
 	<div class="BVRadioButtonIndividualContainer">
-		<input class="_BVFormInput" id="" type="radio" name="" value="" />
+		<input class="_BVFormInput BVFormInputRadioButton" id="" type="radio" name="" value="" />
 		<label class="_BVRadioLabelText" for=""></label>
 		<div class="_BVHelperText"></div>
 	</div>
